CI/CD: Cloud Run deploy on push via GitHub Actions

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "start:cloudrun": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "@google/genai": "^1.27.0",
