--- a/.github/workflows/deploy-cloudrun.yml
+++ b/.github/workflows/deploy-cloudrun.yml
@@ -15,6 +15,7 @@ jobs:
       SERVICE_NAME: say-yes
       REGION: us-central1
       REPOSITORY: docker-repo
+      PROJECT_ID: gen-lang-client-0513797821
 
     steps:
       - name: Checkout
@@ -29,26 +30,34 @@ jobs:
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
 
+      - name: Set project
+        run: gcloud config set project ${PROJECT_ID}
+
       - name: Enable required APIs (idempotent)
         run: |
-          gcloud services enable \
-            run.googleapis.com \
-            artifactregistry.googleapis.com \
-            cloudbuild.googleapis.com
+          gcloud services enable run.googleapis.com --project ${PROJECT_ID}
+          gcloud services enable artifactregistry.googleapis.com --project ${PROJECT_ID}
+          gcloud services enable cloudbuild.googleapis.com --project ${PROJECT_ID}
 
       - name: Ensure Artifact Registry repo exists (idempotent)
         run: |
-          gcloud artifacts repositories describe ${REPOSITORY} --location=${REGION} || \
+          gcloud artifacts repositories describe ${REPOSITORY} --location=${REGION} --project=${PROJECT_ID} || \
           gcloud artifacts repositories create ${REPOSITORY} \
             --repository-format=docker \
             --location=${REGION} \
-            --description="Docker repo for Cloud Run"
+            --description="Docker repo for Cloud Run" \
+            --project=${PROJECT_ID}
 
-      - name: Build & Push image with Cloud Build
+      - name: Configure Docker auth for Artifact Registry
         run: |
-          IMAGE=${REGION}-docker.pkg.dev/$(gcloud config get-value project)/${REPOSITORY}/${SERVICE_NAME}:${{ github.sha }}
+          gcloud auth configure-docker ${REGION}-docker.pkg.dev -q
+
+      - name: Build & Push image (Docker on GitHub runner)
+        run: |
+          IMAGE=${REGION}-docker.pkg.dev/${PROJECT_ID}/${REPOSITORY}/${SERVICE_NAME}:${{ github.sha }}
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-          gcloud builds submit --tag $IMAGE
+          docker build -t "$IMAGE" .
+          docker push "$IMAGE"
 
       - name: Deploy to Cloud Run
         run: |
@@ -60,4 +69,5 @@ jobs:
             --port 8080 \
             --cpu 1 --memory 512Mi \
             --max-instances 1 \
+            --project ${PROJECT_ID} \
             --update-env-vars MONGODB_URI=${{ secrets.MONGODB_URI }},MONGODB_DB=sayyes,DEEPGRAM_API_KEY=${{ secrets.DEEPGRAM_API_KEY }},GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}
