--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.27.0",
+    "@google-cloud/storage": "^7.13.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.9.0",
